@@ -3,3 +3,4 @@
 Notes.txt
 ^doc$
 ^Meta$
+^drafts$
