@@ -95,8 +95,10 @@ exportClasses(TraitAG)
 import(Rcpp)
 importFrom(R6,R6Class)
 importFrom(methods,.hasSlot)
+importFrom(methods,classLabel)
 importFrom(methods,is)
 importFrom(methods,new)
+importFrom(methods,show)
 importFrom(methods,validObject)
 importFrom(stats,aggregate)
 importFrom(stats,coef)
