@@ -1,0 +1,144 @@
+### For Introduction
+
+@article{MaCS,
+   author = {Gary K. Chen and Paul Marjoram and Jeffery D. Wall},
+   title = {Fast and Flexible Simulation of DNA Sequence Data},
+   journal = {Genome Research},
+   volume = {19},
+   pages = {136-142},
+   year = {2009},
+   URL ={http://genome.cshlp.org/content/19/1/136}
+}
+
+@article{AlphaSim,
+   author = {Anne-Michelle Faux and Gregor Gorjanc and R. Chris Gaynor and Mara Battagin and Stefan M. Edwards and David L. Wilson and Sarah J. Hearne and Serap Gonen and John M. Hickey},
+   title = {AlphaSim: Software for Breeding Program Simulation},
+   journal = {The Plant Genome},
+   volume = {9},
+   number = {3},
+   year = {2016},
+   URL ={https://doi.org/10.3835/plantgenome2016.02.0013}
+}
+
+### For theory
+
+@book{Gallais,
+    title = {Quantitative Genetics and Breeding Methods in Autopolyploid Plants},
+    author = {A. Gallais},
+    year = {2003},
+    publisher = {INRA},
+    address = {Paris},
+    ISBN = {2-7380-1093-8}
+}
+
+@book{FalconerMackay,
+    title = {Introduction to Quantitative Genetics},
+    author = {D. S. Falconer and Trudy F. C. Mackay},
+    edition = {4},
+    year = {1996},
+    publisher = {Longman},
+    address = {Harlow},
+    ISBN = {978-0-582-24302-6}
+}
+
+@article{FinlayWilkinson,
+		title = {The analysis of adaptation in a plant-breeding programme},
+	volume = {14},
+	issn = {1444-9838},
+	url = {http://www.publish.csiro.au/cp/AR9630742},
+	doi = {10.1071/ar9630742},
+	language = {en},
+	number = {6},
+	urldate = {2017-12-13},
+	journal = {Australian Journal of Agricultural Research},
+	author = {Finlay, K. W. and Wilkinson, G. N.},
+	year = {1963},
+	pages = {742--754}
+}
+
+@article{gaynor_2017,
+	title = {A Two-Part Strategy for Using Genomic Selection to Develop Inbred Lines},
+	volume = {57},
+	issn = {0011-183X},
+	url = {https://dl.sciencesocieties.org/publications/cs/abstracts/57/5/2372},
+	doi = {10.2135/cropsci2016.09.0742},
+	language = {en},
+	number = {5},
+	urldate = {2017-10-20},
+	journal = {Crop Science},
+	author = {Gaynor, R. Chris and Gorjanc, Gregor and Bentley, Alison R. and Ober, Eric S. and Howell, Phil and Jackson, Robert and Mackay, Ian J. and Hickey, John M.},
+	year = {2017},
+	pages = {2372--2386},
+}
+
+@article{Falconer_85,
+	title = {A note on {Fisher}'s ‘average effect’ and ‘average excess’},
+	volume = {46},
+	issn = {1469-5073, 0016-6723},
+	url = {https://www.cambridge.org/core/journals/genetics-research/article/note-on-fishers-average-effect-and-average-excess/26DFA92B3BA3EA92CD76847BFA21C5C8},
+	doi = {10.1017/S0016672300022825},
+	language = {en},
+	number = {3},
+	urldate = {2019-01-03},
+	journal = {Genetics Research},
+	author = {Falconer, D. S.},
+	month = dec,
+	year = {1985},
+	pages = {337--347}
+}
+
+@article{Massman13,
+   author = {Jon M. Massman and Andres Gordillo and Robenzon E. Lorenzana and Rex Bernardo},
+   title = {Genomewide Predictions from Maize Single-Cross Data},
+   journal = {Theoretical and Applied Genetics},
+   volume = {126},
+   number = {1},
+   pages = {12-22},
+   year = {2013},
+   URL ={https://doi.org/10.1007/s00122-012-1955-y}
+}
+
+@manual{EMMREML,
+    title = {EMMREML: Fitting Mixed Models with Known Covariance Structures},
+    author = {Deniz Akdemir and Okeke Uche Godfrey},
+    year = {2015},
+    note = {R package version 3.1},
+    url = {https://CRAN.R-project.org/package=EMMREML},
+}
+
+@article{sommer,
+    title = {Genome assisted prediction of quantitative traits using the R package sommer},
+    author = {Giovanny Covarrubias-Pazaran},
+    journal = {PLoS ONE},
+    year = {2016},
+    volume = {11},
+    pages = {1-15},
+    url = {https://doi.org/10.1371/journal.pone.0156744}
+}
+
+@article{xiang_2016,
+	title = {Genomic evaluation by including dominance effects and inbreeding depression for purebred and crossbred performance with an application in pigs},
+	volume = {48},
+	issn = {1297-9686},
+	url = {https://doi.org/10.1186/s12711-016-0271-4},
+	doi = {10.1186/s12711-016-0271-4},
+	number = {1},
+	urldate = {2019-04-23},
+	journal = {Genetics Selection Evolution},
+	author = {Xiang, Tao and Christensen, Ole Fredslund and Vitezica, Zulma Gladis and Legarra, Andres},
+	month = nov,
+	year = {2016},
+	pages = {92}
+}
+
+@article{fisher_1919, 
+  title={XV.—The Correlation between Relatives on the Supposition of Mendelian Inheritance.}, 
+  volume={52}, 
+  DOI={10.1017/S0080456800012163}, 
+  number={2}, 
+  journal={Transactions of the Royal Society of Edinburgh}, 
+  publisher={Royal Society of Edinburgh Scotland Foundation}, 
+  author={Fisher, R. A.}, 
+  year={1919}, 
+  pages={399–433}
+}
