@@ -15,6 +15,8 @@ Changes in version 0.11.0
     
   Bug fixes
     -fixed a bug returning the first individual when selecting 0
+    -fixed error in recombination track when using makeDH
+    -fixed error causing epistatic effects to mask GxE effects
 
 Changes in version 0.10.0
   
